src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__if_conditions_location_marked.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i32 @myFunc() !dbg !3 {
entry:
  %myFunc = alloca i32, align 4, !dbg !6
  call void @llvm.dbg.declare(metadata i32* %myFunc, metadata !7, metadata !DIExpression()), !dbg !11
  store i32 0, i32* %myFunc, align 4, !dbg !6
  br i1 true, label %condition_body, label %branch, !dbg !12

condition_body:                                   ; preds = %entry
  store i32 1, i32* %myFunc, align 4, !dbg !13
  br label %continue, !dbg !13

branch:                                           ; preds = %entry
  br i1 false, label %condition_body1, label %else, !dbg !14

condition_body1:                                  ; preds = %branch
  store i32 1, i32* %myFunc, align 4, !dbg !15
  br label %continue, !dbg !15

else:                                             ; preds = %branch
  store i32 1, i32* %myFunc, align 4, !dbg !16
  br label %continue, !dbg !16

continue:                                         ; preds = %else, %condition_body1, %condition_body
  store i32 1, i32* %myFunc, align 4, !dbg !17
  %myFunc_ret = load i32, i32* %myFunc, align 4, !dbg !17
  ret i32 %myFunc_ret, !dbg !17
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.dbg.cu = !{!0}

!0 = distinct !DICompileUnit(language: DW_LANG_C, file: !1, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !2, splitDebugInlining: false)
!1 = !DIFile(filename: "main", directory: "")
!2 = !{}
!3 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !1, file: !1, line: 2, type: !4, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !0, retainedNodes: !2)
!4 = !DISubroutineType(flags: DIFlagPublic, types: !5)
!5 = !{null}
!6 = !DILocation(line: 3, column: 12, scope: !3)
!7 = !DILocalVariable(name: "myFunc", scope: !3, file: !1, line: 2, type: !8, align: 32)
!8 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !9, file: !9, line: 10, baseType: !10, align: 32)
!9 = !DIFile(filename: "<internal>", directory: "")
!10 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!11 = !DILocation(line: 2, column: 17, scope: !3)
!12 = !DILocation(line: 3, column: 15, scope: !3)
!13 = !DILocation(line: 4, column: 16, scope: !3)
!14 = !DILocation(line: 5, column: 18, scope: !3)
!15 = !DILocation(line: 6, column: 16, scope: !3)
!16 = !DILocation(line: 8, column: 16, scope: !3)
!17 = !DILocation(line: 10, column: 12, scope: !3)

