src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__nested_function_calls_get_location.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i32 @myFunc(i32 %0) !dbg !3 {
entry:
  %myFunc = alloca i32, align 4, !dbg !9
  %x = alloca i32, align 4, !dbg !9
  call void @llvm.dbg.declare(metadata i32* %x, metadata !10, metadata !DIExpression()), !dbg !11
  store i32 %0, i32* %x, align 4, !dbg !9
  call void @llvm.dbg.declare(metadata i32* %myFunc, metadata !12, metadata !DIExpression()), !dbg !13
  store i32 0, i32* %myFunc, align 4, !dbg !9
  %call = call i32 @myFunc(i32 1), !dbg !14
  %call1 = call i32 @myFunc(i32 %call), !dbg !9
  %myFunc_ret = load i32, i32* %myFunc, align 4, !dbg !9
  ret i32 %myFunc_ret, !dbg !9
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.dbg.cu = !{!0}

!0 = distinct !DICompileUnit(language: DW_LANG_C, file: !1, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !2, splitDebugInlining: false)
!1 = !DIFile(filename: "main", directory: "")
!2 = !{}
!3 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !1, file: !1, line: 2, type: !4, scopeLine: 4, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !0, retainedNodes: !2)
!4 = !DISubroutineType(flags: DIFlagPublic, types: !5)
!5 = !{null, !6}
!6 = !DIDerivedType(tag: DW_TAG_typedef, name: "dint", scope: !7, file: !7, line: 10, baseType: !8, align: 32)
!7 = !DIFile(filename: "<internal>", directory: "")
!8 = !DIBasicType(name: "int32", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!9 = !DILocation(line: 4, column: 12, scope: !3)
!10 = !DILocalVariable(name: "x", scope: !3, file: !1, line: 3, type: !6)
!11 = !DILocation(line: 3, column: 18, scope: !3)
!12 = !DILocalVariable(name: "myFunc", scope: !3, file: !1, line: 2, type: !6, align: 32)
!13 = !DILocation(line: 2, column: 17, scope: !3)
!14 = !DILocation(line: 4, column: 19, scope: !3)

